--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "scripts": {
     "start:dev": "cross-env NODE_ENV=development nodemon src/app.ts --watch src -e ts",
     "start:prod": "cross-env NODE_ENV=production node dist/app",
-    "build": "cross-env NODE_ENV=production tsc",
+    "build": "cross-env NODE_ENV=production rimraf dist && tsc",
     "lint": "eslint . --fix",
     "format": "prettier . --write"
   },
   "dependencies": {
+    "bullmq": "^4.8.0",
     "koa": "^2.14.2",
     "koa-bodyparser": "^4.4.1",
     "koa-router": "^12.0.0",
@@ -32,6 +33,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "nodemon": "^3.0.1",
     "prettier": "^2.8.7",
+    "rimraf": "^5.0.1",
     "ts-dotenv": "^0.9.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
