--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,6 @@ services:
 
   redis:
     image: redis:alpine
-    environment:
-      REDIS_PASSWORD: 1234
     ports:
       - "6379:6379"
+    command: ["redis-server", "--requirepass","1234"]
