--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "format": "prettier . --write"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "bullmq": "^4.8.0",
     "joi": "^17.9.2",
     "koa": "^2.14.2",
     "koa-bodyparser": "^4.4.1",
+    "koa-logger": "^3.2.1",
     "koa-router": "^12.0.0",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
@@ -24,6 +26,7 @@
     "@types/http-status-codes": "^1.2.0",
     "@types/koa": "^2.13.8",
     "@types/koa-bodyparser": "^4.3.10",
+    "@types/koa-logger": "^3.1.2",
     "@types/koa-router": "^7.4.4",
     "@types/node": "^20.5.4",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
